fix horizontal scrolling on software list

--- a/src/components/Software/index.css
+++ b/src/components/Software/index.css
@@ -1,4 +1,4 @@
-.owl-carousel {
+.rec-carousel-wrapper {
     -ms-touch-action: pan-y;
     touch-action: pan-y;
 }
